syntax = "proto3";

option csharp_namespace = "GrpcServer";
package customrers;

service Customer {
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
	rpc GetNewCustomers(NewCustomerReqest) returns (stream CustomerModel);
}

message NewCustomerReqest {

}


message CustomerLookupModel {
	int32 userId = 1;
}
message CustomerModel {
	string firstName = 1;
	string lastName = 2;
	string emailAdress = 3;
	bool isAlive = 4;
	int32 age = 5;
}